# awscli-local

./: Makefile  pyproject.toml
.github/hide_workflow/: integration.yml
.github/workflows/: build.yml
hide_setup/: setup.py
